--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+/* .parish-label {
+  font-size: 12px;
+  color: #432abc;
+  background-color: rgb(255, 255, 255);
+  padding: 2px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+} */
